fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
     object-fit: cover;
     text-align: center;
     padding-bottom: 20px;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 
 .carouselImg h1 {
@@ -105,7 +105,7 @@ body {
     /* float: left; */
     padding-top: 10%;
     clear: left;
-    margin-top: -10px;
+    /* margin-top: -10px; */
     /* color: #000; */
 }
 
